# subtatix

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/subgenx/: __init__.py  __main__.py  cli.py  errors.py  runtime.py  subtitles.py  translation.py
src/subtatix/: __main__.py  cli.py  errors.py  runtime.py  subtitles.py  translation.py
