[project]
name = "subgenx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris Paganon", email = "info@chrispaganon.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "transformers>=4.57.6",
    "whisperx>=3.8.5",
]

[project.scripts]
subgenx = "subgenx.__main__:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"
