[project]
name = "subgenx"
version = "0.1.0"
description = "CLI for generating and translating SRT subtitles with WhisperX"
readme = "README.md"
license = "BSD-2-Clause"
authors = [
    { name = "Chris Paganon", email = "info@chrispaganon.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "transformers>=4.57.6",
    "typer>=0.25.1",
    "whisperx>=3.8.5",
]

[project.scripts]
subgenx = "subgenx.__main__:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"
