[project]
name = "subtatix"
version = "0.1.0"
description = "CLI for generating and translating SRT subtitles with WhisperX"
readme = "README.md"
license = "BSD-2-Clause"
authors = [
    { name = "Chris Paganon", email = "info@chrispaganon.com" }
]
requires-python = ">=3.12"
keywords = ["cli", "subtitles", "srt", "whisperx", "transcription", "translation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "accelerate>=1.13.0",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "transformers>=4.57.6",
    "typer>=0.25.1",
    "whisperx>=3.8.5",
]

[project.urls]
Homepage = "https://github.com/chris-paganon/subtatix"
Repository = "https://github.com/chris-paganon/subtatix"
Issues = "https://github.com/chris-paganon/subtatix/issues"

[project.scripts]
subtatix = "subtatix.__main__:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"
